fix email fields in dark mode

--- a/sass/src/dark/index.scss
+++ b/sass/src/dark/index.scss
@@ -14,6 +14,7 @@ html {
   background-color: $bg-color;
 }
 
+input[type=email],
 input[type=text],
 input[type=password] {
 	color: $off-black;
